Fix bugs.